# skinrender

./: .gitignore  makefile
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml
skinModelGenerator/: 1024.pbrt  Makefile  Simulation_Template.csv  aditya.pbrt  box.ply  bpbrt  buildPbrtInput.cpp  density.txt  e66.exr  hacked.pbrt  image.pbrt  input.txt  jobs.txt  mat2.h  montage.py  properties.h  properties.txt  scene.pbrt  setup.sh  simWriter.py  testSim1.csv  vec2.h
skinModelGenerator/dart_throwing/: points.txt
skinModelGenerator/density/: Makefile  Shader.hpp  density  density.vert  test.cpp
skinModelGenerator/geometry/: density_float_values.pbrt  m_d.pbrt  modified_density_render.70.pbrt  skin_density.pbrt
skinModelGenerator/scenes/: image.pbrt  newScene2.pbrt  test1.pbrt  test1_1.pbrt
skinModelGenerator/simulations/: .~lock.Simulation_2.csv#  .~lock.testSim1.csv#  Simulation_1.csv  Simulation_10.csv  Simulation_11.csv  Simulation_12.csv  Simulation_13.csv  Simulation_14.csv  Simulation_15.csv  Simulation_16.csv  Simulation_17.csv  Simulation_18.csv  Simulation_19.csv  Simulation_2.csv  Simulation_20.csv  Simulation_21.csv  Simulation_22.csv  Simulation_23.csv  Simulation_24.csv  Simulation_25.csv  Simulation_26.csv  Simulation_27.csv  Simulation_28.csv  Simulation_29.csv  Simulation_3.csv  Simulation_30.csv  (+58 more)
skinModelGenerator/src/breastMass/: CMakeCache.txt  CMakeLists.txt  Makefile  breastMass  breastMass.cxx  breastMass.hxx  cmake_install.cmake  mass_-1824298013.cfg  mass_-1824298013.vti  readme.txt  testSpicule.cfg
(+65 files in other folders)
